--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"react": "16.0.0-beta.5",
-		"react-native": "0.49.5"
+		"react-native": "0.49.5",
+		"react-native-check-box": "^2.0.2"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
