--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-awesome-alert",
-  "version": "0.2.3",
-  "main": "src/AwesomeAlert.js",
-  "description": "Modal component with checkbox for react native, it works on iOS and Android.",
+  "version": "0.2.4",
+  "main": "src/CheckAlert.js",
+  "description": "Modal component with checkoptions for react native, it works on iOS and Android.",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
     "Modal",
     "check-box",
     "check",
+    "alert",
     "box",
     "react-component",
     "ios",
